# NetLedger

./: .gitignore  CMakeLists.txt  README.md
config/: netledger.json  netledger.service
scripts/: build.sh
src/: main.cpp
tests/: netledger_test.cc
